fix wrapped default display with view encapsulation none

--- a/packages/ng/callout/callout-disclosure/callout-disclosure.component.scss
+++ b/packages/ng/callout/callout-disclosure/callout-disclosure.component.scss
@@ -1,5 +1,5 @@
 @use '@lucca-front/scss/src/components/calloutDisclosure';
 
-:host {
+lu-callout-disclosure {
   display: block;
 }
